# archivelib-rs

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Mapping.yml  Pipfile  README.md  build.rs  compress_fn232_exploration.yaml  compressed-format.md  create_test_cases.py  data_diff.py  file_to_test_case.py  fuzz_to_test_cases.py  hus_vip_to_test_case.py  pyproject.toml  queue_to_new_inputs.py  test_case_gen.py
archivelib-rs-tdd/: Cargo.toml  test-case-star_hus-stitch_attrs.md
archivelib-sys/: Cargo.toml  build.rs
archivelib-sys-gen/: .gitignore  Cargo.toml  build.rs
archivelib-sys-gen/c-lib/: CMakeLists.txt
archivelib-sys-gen/c-lib/include/: _r.h  al.h  alcustom.h  alcxlkr.h  aldefs.h  algauge.h  all.h  all.hpp  alstream.h  arcentry.h  archiveb.h  arclib.h  bargraph.h  cmpengn.h  compat.hpp  copyengn.h  grenengn.h  monitor.h  objname.h  spinner.h  status.h  stor.h  timedate.h  vssver2.scc  wildcard.h  winmon.h
archivelib-sys-gen/c-lib/include/_custom/: _debug.h  grenengn.h  memstore.h  objname.hpp  status.hpp  stor.h  stor.hpp  timedate.hpp
archivelib-sys-gen/c-lib/old_include/: _debug.h  _match.h  alcxl.h  arcentry.h  archive.h  bargraph.h
archivelib-sys-gen/c-lib/old_src/: al100.cpp  cxl_engn.cpp  cxl_list.cpp  filestor.cpp  objname.cpp
archivelib-sys-gen/c-lib/src/: _debug.cpp  _match.cpp  _openf.cpp  _rc.cpp  _re.cpp  archive.cpp  archiveb.cpp  cmpengn.cpp  compat.cpp  copyengn.cpp  cxl_arch.cpp  cxl_cmpo.cpp  cxl_entr.cpp  cxl_garc.cpp  cxl_mem.cpp  cxl_mon.cpp  cxl_sobj.cpp  cxl_wild.cpp  filestor.cpp  grenengn.cpp  memstore.cpp  monitor.cpp  status.cpp  stor_.cpp  storage.cpp  storcmp.cpp  timedate.cpp  vssver2.scc  wildcard.cpp
archivelib-sys-orig/: CMakeLists.txt  Cargo.toml  build.rs
archivelib-sys-orig/c-lib/: alcustom.h  api.cpp  api.h  compile_flags.txt  enum_rev.cpp  wrapper.h
archivelib-sys-orig/c-lib/include/: _debug.h  _match.h  _openf.h  _r.h  al.h  alcxl.h  alcxlkr.h  aldefs.h  algauge.h  alstream.h  arcentry.h  archive.h  archiveb.h  arclib.h  bargraph.h  cmpengn.h  cmpobj.h  copyengn.h  fileattr.h  filestor.h  grenengn.h  memstore.h  monitor.h  objname.h  spinner.h  status.h  stor.h  timedate.h  wildcard.h  winmon.h
archivelib-sys-orig/c-lib/src/: _debug.cpp  _match.cpp  _new.cpp  _openf.cpp  _rc.cpp  _re.cpp  al100.cpp  arcentry.cpp  archive.cpp  archiveb.cpp  cmpengn.cpp  cmpobj.cpp  copyengn.cpp  cxl_arch.cpp  cxl_cmpo.cpp  cxl_engn.cpp  cxl_entr.cpp  cxl_file.cpp  cxl_garc.cpp  cxl_list.cpp  cxl_mem.cpp  cxl_mon.cpp  cxl_sobj.cpp  cxl_util.cpp  cxl_wild.cpp  fileattr.cpp  filestor.cpp  grenengn.cpp  memstore.cpp  monitor.cpp  objname.cpp  status.cpp  storage.cpp  storcmp.cpp  timedate.cpp  wildcard.cpp
archivelib-sys-orig/c-src/: alzip.cpp  unalzip.cpp
archivelib-sys-orig/src/: lib.rs
archivelib-sys-orig/src/executables/: decompress.rs
archivelib-sys-refactored/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  compile_commands.json
archivelib-sys-refactored/c-lib/: .gitignore  api.cpp  api.h  compile_flags.txt  enum_rev.cpp  enum_rev.hpp  wrapper.h
archivelib-sys-refactored/c-lib/include/: _debug.h  _openf.h  aldefs.h  arclib.h  grenengn.h  memstore.h  r_compress.hpp  r_expand.hpp  simple_status.h  status.h  stor.h
archivelib-sys-refactored/c-lib/include/new/: compress.h  compress_struct.h  const.h  cpp_compat.h  expand.h  expand_struct.h
archivelib-sys-refactored/c-lib/include/support/: compress.h  debug.h  expand.h
archivelib-sys-refactored/c-lib/src/: _debug.cpp  _openf.cpp  grenengn.cpp  memstore.cpp  status.cpp  storage.cpp
archivelib-sys-refactored/c-lib/src/new/: compress_buffer_mgmt.c  compress_init.c  compress_init.cpp  compress_util.c  expand_buffer.c  expand_buffer.cpp  expand_init.c  expand_init.cpp
archivelib-sys-refactored/c-lib/src/partial/: compress_buffer.c  compress_compress.c  compress_init.cpp  expand_buffer.cpp  expand_init.cpp
archivelib-sys-refactored/c-lib/src/r_compress/: fn199.c  fn199.cpp  fn202.c  fn207.c  fn211.c  fn216.c  fn216.cpp  fn218.c  fn222.c  fn222.cpp  fn224.c  fn225.c  fn228.c  fn230.c
archivelib-sys-refactored/c-lib/src/r_expand/: calculate_run_offset.c  expand.c  expand.cpp  fn253.c  fn253.cpp  fn255.c  fn258.c  fn258.cpp  get_next_item.c  get_next_item.cpp
archivelib-sys-refactored/c-lib/src/support/: compress_diff.cpp  cpp_compat.cpp  expand_diff.cpp
archivelib-sys-refactored/c-src/: alzip.cpp  unalzip.cpp
archivelib-sys-refactored/src/: lib.rs
archivelib-sys-refactored/src/executables/: compress.rs  util.rs
archivelib-sys-refactored/src/test/: macros.rs  mod.rs  q.rs  util.rs
archivelib-sys-refactored/src/test/fixed/: mod.rs
archivelib-sys-refactored/src/test/fixed/real_world/: embroidermodder_hus.rs  mod.rs  small_heart_hus.rs  star_hus.rs
archivelib-sys/c-lib/: api.cpp  api.h  enum_rev.cpp  enum_rev.hpp  wrapper.h
archivelib-sys/c-lib/include/: _openf.h  _r.h  aldefs.h  all.hpp  arclib.h  cmpobj.h  fileattr.h  filestor.h  memstore.h  objname.h
archivelib-sys/c-lib/src/: _match.cpp  _new.cpp  _rc.cpp  arcentry.cpp  cmpobj.cpp  cxl_arch.cpp  cxl_entr.cpp  cxl_file.cpp  cxl_util.cpp  fileattr.cpp  memstore.cpp  objname.cpp
archivelib-sys/src/: lib.rs
archivelib-sys2/: Cargo.toml  build.rs  compile_commands.json
benches/: bench.rs
cli/: .gitignore  Cargo.toml  hexdecom.py  hexgen.py
cli/src/: main.rs
cli/src/executables/: fuzz_afl.rs  fuzz_hongg.rs
e2e_test/: _support.py  conftest.py  long.json  medium.json  short.json  test_app.py  test_system.py  test_unzip_data.py
emb-compress/: Cargo.toml  build.rs
fuzz/: .gitignore  Cargo.toml  README.md  crash-8bb29a800268a6dfe01c084121a17b80eff25361
not-docs/: README.md  compression_process.md  fn199.md  var201.md
old_tests/: array_out_of_bounds.rs  macros.rs  test_fa65fcd64b66f20b058d5d11a24b9a395446d0ff.rs  test_fc050b20379e2bbbe5e4de26745fc042e3671c2e.rs  test_fdbbcd0573f13068d723e79cd4dc2e003258c6a3.rs
py/: pyproject.toml
py/archivelib/compress/: byte_run_hash_table.py
py/test/compress/: test_byte_run_hash_table.py
(+815 files in other folders)
