[package]
name = "archivelib"
description = "An implementaton of the Greenleaf ArchiveLib compression/decompression algorithm"
version = "0.1.2"
authors = ["Opal Symes <code@opal.codes>"]
edition = "2018"

homepage = "https://github.com/software-opal/archivelib-rs"
license = "GPL-2.0-only"

[[bin]]
name = "unalzip"
path = "src/executables/decompress.rs"

[[bin]]
name = "alzip"
path = "src/executables/compress.rs"

[features]
new_impl = []
sys = ['archivelib-sys']
default=["new_impl"]

[dependencies]
failure = "0.1.3"
failure_derive = "0.1.3"

# archivelib-sys = { version = "0.1.0", path = "archivelib-sys-orig", optional=true}
archivelib-sys = { version = "0.1.0", path = "archivelib-sys-refactored", optional=true}

[dev-dependencies]
lazy_static = "1.3.0"
rand = "0.7.0"
# archivelib-sys = { version = "0.1.0", path = "archivelib-sys-orig" }
archivelib-sys = { version = "0.1.0", path = "archivelib-sys-refactored" }

[workspace]
members = [
  # "archivelib-sys-orig",
  "archivelib-sys-refactored",
  "cli",
  # "fuzz",
]
