[package]
name = "archivelib"
description = "An implementaton of the Greenleaf ArchiveLib compression/decompression algorithm"
version = "0.2.0"
authors = ["Opal Symes <code@opal.codes>"]
edition = "2018"

homepage = "https://github.com/software-opal/archivelib-rs"
license = "GPL-2.0-only"

exclude = [
  "fuzz",
  "archivelib-sys-*",
  "e2e_test",
  "test_data",
  "cli",
]

[[bin]]
name = "unalzip"
path = "src/executables/decompress.rs"

[[bin]]
name = "alzip"
path = "src/executables/compress.rs"

[features]
new_impl = []
default = ["new_impl"]

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.7.2"
# We use threads for the 'hangs' tests to prevent the tests runnin forever
humthreads = '0.1.4'
# archivelib-sys = { version = "0.2.0", path = "archivelib-sys-orig" }
# archivelib-sys = { version = "0.2.0", path = "archivelib-sys-refactored" }

[workspace]
members = [
  "archivelib-sys-orig",
  # "archivelib-sys-refactored",
  "cli",
  # "fuzz",
]
