[package]
name = "archivelib"
description = "An implementaton of the Greenleaf ArchiveLib compression/decompression algorithm"
version = "0.2.0"
authors = ["Opal Symes <code@opal.codes>"]
edition = "2024"

homepage = "https://github.com/software-opal/archivelib-rs"
license = "GPL-2.0-only"

categories = ["compression", "algorithms", "api-bindings"]
keywords = ["archivelib", "archive", "compress"]

exclude = [
  "fuzz",
  "archivelib-sys-*",
  "e2e_test",
  "test_data",
  "cli",
]

[[bin]]
name = "unalzip"
path = "src/executables/decompress.rs"

[[bin]]
name = "alzip"
path = "src/executables/compress.rs"

[features]
default = ["new_impl"]
new_impl = []
sys = ["dep:archivelib-sys"]

"fuzz-afl" = []
"fuzz-hfuzz" = []

[dependencies]
thiserror = "2"
archivelib-sys = { version = "0.2.0", path = "archivelib-sys-orig", optional=true }
# archivelib-sys = { version = "0.2.0", path = "archivelib-sys-refactored" , optional=true }

[dev-dependencies]
lazy_static = "1.5.0"
rand = "0.9.0"
# We use threads for the 'hangs' tests to prevent the tests running forever
humthreads = "0.2.1"
archivelib-sys = { version = "0.2.0", path = "archivelib-sys-orig" }
proptest = "1.6.0"

[workspace]
members = [
  "archivelib-sys-orig",
  # "archivelib-sys-refactored",
  "cli",
  # "fuzz",
]
