[tool.poetry]
name = "archivelib"
version = "0.1.0"
description = ""
authors = ["Opal Symes <code@opal.codes>"]
license = "GPL-2.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
attrs = "^19.1"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
isort = "^4.3"
pytest = "^5.1"
pytest-parallel = "^0.0.9"
toml = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
