
[tool.poetry]
package-mode = false
name = "archivelib"
version = "0.1.0"
description = ""
authors = ["Opal Symes <code@opal.codes>"]
license = "GPL-2.0"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
attrs = "^25.3"
black = "^25.1"
isort = "^6.0"
pytest = "^8.3"
pytest-xdist = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
