[package]
name = "archivelib-sys"
description = "An implementaton(in C++) of the Greenleaf ArchiveLib compression/decompression algorithm"
build = "build.rs"
version = "0.2.0"
authors = ["Opal Symes <code@opal.codes>"]
edition = "2018"

homepage = "https://github.com/software-opal/archivelib-rs"
license = "GPL-2.0-only"

include = ["src/**/*", "c-lib/**/*", "Cargo.toml", "build.rs"]

[[bin]]
name = "unalszip"
path = "src/executables/decompress.rs"

[[bin]]
name = "alszip"
path = "src/executables/compress.rs"

[build-dependencies]
cc = { version = "1.0.40", features = ["parallel"] }
bindgen = "0.51.0"

[dev-dependencies]
rand = "0.7.2"
