[package]
name = "archivelib-sys"
description = "An implementaton(in C++) of the Greenleaf ArchiveLib compression/decompression algorithm"
build = "build.rs"
version = "0.1.0"
authors = ["Opal Symes <leesdolphin@gmail.com>"]
edition = "2018"

homepage = "https://github.com/software-opal/archivelib-rs"
license = "LGPLv3"
license-file = "../LICENSE.md"

[build-dependencies]
cc = { version = "1.0" }
bindgen = "0.47.0"

[dev-dependencies]
rand = "0.6.1"
