[package]
name = "archivelib-sys"
# name = "archivelib-sys_a"
description = "An implementaton(in C++) of the Greenleaf ArchiveLib compression/decompression algorithm"
build = "build.rs"
version = "0.1.1"
authors = ["Opal Symes <leesdolphin@gmail.com>"]
edition = "2018"

homepage = "https://github.com/software-opal/archivelib-rs"
license = "GPL-2.0-only"

include = ["src/**/*", "c-lib/**/*", "Cargo.toml", "build.rs"]

[build-dependencies]
cc = { version = "1.0.40", features = ["parallel"] }
bindgen = "0.51.0"

[dev-dependencies]
rand = "0.7.0"
