[package]
name = "cli"
version = "0.1.0"
authors = ["opal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archivelib = { version = "0.1.2", path = "../" , features=["new_impl"]}
archivelib-sys = { version = "0.1.0", path = "../archivelib-sys2" }

afl = { version = "*", optional = true }
honggfuzz = { version = "*", optional = true }

[features]
fuzz-afl = ["afl"]
fuzz-hfuzz = ["honggfuzz"]
