[package]
name = "cli"
version = "0.1.0"
authors = ["opal"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "alfuzz_afl"
path = "src/executables/fuzz_afl.rs"
required-features = ["fuzz-afl"]

[[bin]]
name = "alfuzz_hongg"
path = "src/executables/fuzz_hongg.rs"
required-features = ["fuzz-hongg"]

[dependencies]
archivelib = { path = "../" , features=["new_impl", "sys"]}

afl = { version = "*", optional = true }
honggfuzz = { version = "*", optional = true }

[features]
fuzz-afl = ["afl"]
fuzz-hfuzz = ["honggfuzz"]
