[project]
name = "archivelib"
version = "0.1.0"
description = "A pure Python implementation of ArchiveLib. Ported from a Rust reimplementation"
authors = [
    {name = "Opal Symes",email = "code@opal.codes"}
]
license = {text = "GPLv2"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
